// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render simple timeline graph 1`] = `
<div>
  <div
    class="timelineContainer"
  >
    <div
      class="timelineContent"
    >
      <div
        class="MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
      >
        <div
          class="timelineDateContainer"
        >
          <p
            class="MuiTypography-root smallDate MuiTypography-body2 MuiTypography-alignCenter"
            data-testid="timeline-year-0"
          >
            2018
          </p>
          <p
            class="MuiTypography-root timelineDate MuiTypography-body2 MuiTypography-alignCenter"
            data-testid="timeline-date-0"
          >
            20 Apr
          </p>
        </div>
        <div
          class="timeline timelineStart timelineEnd"
        >
          <div
            class="notch"
          />
          <div
            class="MuiPaper-root timelinePaper MuiPaper-elevation6 MuiPaper-rounded"
            data-testid="timeline-item-0"
            id="0"
          >
            <div
              class="paperContent"
            >
              <div>
                Testing
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render simple timeline graph with time 1`] = `
<div>
  <div
    class="timelineContainer"
  >
    <div
      class="timelineContent"
    >
      <div
        class="MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
      >
        <div
          class="timelineDateContainer"
        >
          <p
            class="MuiTypography-root smallDate MuiTypography-body2 MuiTypography-alignCenter"
            data-testid="timeline-year-0"
          >
            2018
          </p>
          <p
            class="MuiTypography-root timelineDate MuiTypography-body2 MuiTypography-alignCenter"
            data-testid="timeline-date-0"
          >
            20 Apr
          </p>
          <p
            class="MuiTypography-root smallDate MuiTypography-body2 MuiTypography-alignCenter"
            data-testid="timeline-time-0"
          >
            16:20
          </p>
        </div>
        <div
          class="timeline timelineStart timelineEnd"
        >
          <div
            class="notch"
          />
          <div
            class="MuiPaper-root timelinePaper MuiPaper-elevation6 MuiPaper-rounded"
            data-testid="timeline-item-0"
            id="0"
          >
            <div
              class="paperContent"
            >
              <div>
                Testing
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test selecting an item on the timeline card 1`] = `
<div>
  <div
    class="timelineContainer"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root timelineCard card"
    >
      <div
        class="MuiCardContent-root"
        data-testid="card-content"
      >
        <div
          class="timelineContent"
        >
          <div
            class="MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
          >
            <div
              class="timelineDateContainer"
            >
              <p
                class="MuiTypography-root smallDate MuiTypography-body2 MuiTypography-alignCenter"
                data-testid="timeline-year-0"
              >
                2018
              </p>
              <p
                class="MuiTypography-root timelineDate MuiTypography-body2 MuiTypography-alignCenter"
                data-testid="timeline-date-0"
              >
                20 Apr
              </p>
            </div>
            <div
              class="timeline timelineStart timelineEnd"
            >
              <div
                class="notch"
              />
              <div
                class="MuiPaper-root timelinePaperButton MuiPaper-elevation6 MuiPaper-rounded"
                data-testid="timeline-item-0"
                id="0"
              >
                <div
                  class="paperContent"
                >
                  <div>
                    Testing
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test unselecting an item on the timeline card 1`] = `
<div>
  <div
    class="timelineContainer"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root timelineCard card"
    >
      <div
        class="MuiCardContent-root"
        data-testid="card-content"
      >
        <div
          class="timelineContent"
        >
          <div
            class="MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
          >
            <div
              class="timelineDateContainer"
            >
              <p
                class="MuiTypography-root smallDate MuiTypography-body2 MuiTypography-alignCenter"
                data-testid="timeline-year-0"
              >
                2018
              </p>
              <p
                class="MuiTypography-root timelineDate MuiTypography-body2 MuiTypography-alignCenter"
                data-testid="timeline-date-0"
              >
                20 Apr
              </p>
            </div>
            <div
              class="timeline timelineStart timelineEnd"
            >
              <div
                class="notch selected"
              />
              <div
                class="MuiPaper-root timelinePaperButton timelinePaperSelected MuiPaper-elevation4 MuiPaper-rounded"
                data-testid="timeline-item-0"
                id="0"
              >
                <div
                  class="paperContent"
                >
                  <div>
                    Testing
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
